--- a/test/体素化/体素模型结构随机断开代码.ipynb
+++ b/test/体素化/体素模型结构随机断开代码.ipynb
@@ -17945,7 +17945,7 @@
     "label_data = np.zeros((150, 150, 150))\n",
     "face_voxel = []\n",
     "\n",
-    "t = 0\n",
+    "n = 0\n",
     "for i in range(data_new.shape[0]):\n",
     "    for j in range(data_new.shape[1]):\n",
     "        for k in range(data_new.shape[2]):\n",
@@ -17971,8 +17971,8 @@
     "                    data_new[i, j, k-1] = 1\n",
     "\n",
     "                face_voxel = []\n",
-    "            t += 1\n",
-    "print('遍历了：',t,'次')\n",
+    "            n += 1\n",
+    "print('遍历了：',n,'次')\n",
     "\n",
     "#绘制修补完成的模型\n",
     "mycolormap = plt.get_cmap('winter')\n",
