--- a/###TOPO_Post_Processing###/###3dunet###/train/###Dataset_Operation_v0.1###.ipynb
+++ b/###TOPO_Post_Processing###/###3dunet###/train/###Dataset_Operation_v0.1###.ipynb
@@ -136,6 +136,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "__循环命名文件并按顺序保存__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "data_path = '../data'\n",
+    "for i in range(len(data_path)):\n",
+    "    data = np.load('../../../topdata/topdata/dataset/input/0.npy')\n",
+    "    np.save('../../../topdata/topdata/dataset/input/%d.npy' %i, data)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "__3D体素数据可视化__"
    ]
   },
@@ -8336,9 +8357,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pytorch_cpu",
+   "display_name": "Python pytorch_gpu",
    "language": "python",
-   "name": "python3"
+   "name": "pytorch_gpu"
   },
   "language_info": {
    "codemirror_mode": {
@@ -8350,7 +8371,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.7.12"
   },
   "orig_nbformat": 4,
   "vscode": {
