--- a/test/体素化/体素模型结构随机断开代码.ipynb
+++ b/test/体素化/体素模型结构随机断开代码.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,12 +134,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import scipy.io as io\n",
-    "io.savemat('../../topdata/topdata/topdata_mat/top3d_Cantilever_new.mat',{'data':data_new})"
+    "# import scipy.io as io\n",
+    "# io.savemat('../../topdata/topdata/topdata_mat/top3d_Cantilever_new.mat',{'data':data_new})"
    ]
   },
   {
@@ -152,11 +152,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'input_data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_12056\\907444095.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     22\u001b[0m     \u001b[0minput_data\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdata_new\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     23\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0minput_data\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 24\u001b[1;33m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msave\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'../../topdata/topdata/dataset/input/top3d_Cantilever_new_input_1'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0minput_data\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'input_data' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "%matplotlib widget\n",
     "import numpy as np\n",
     "import scipy.io as io\n",
     "import matplotlib.pyplot as plt\n",
@@ -178,15 +189,26 @@
     "                data_new[m][n][t] = 0\n",
     "\n",
     "    input_data = data_new\n",
-    "    return input_data\n",
-    "np.save('../../topdata/topdata/dataset/input/top3d_Cantilever_new_input_1',input_data)"
+    "    return input_data\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'datapreprocessing' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_12056\\2227940676.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     10\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mt\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msample_amount\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m         \u001b[0mmatdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mio\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloadmat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmatdata_index\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m         \u001b[0mdata_new\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdatapreprocessing\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmatdata\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     13\u001b[0m         \u001b[0mdata_repair\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdatarepair\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata_new\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m         \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msave\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlabel_save_path\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'%d.npy'\u001b[0m \u001b[1;33m%\u001b[0m\u001b[0mt\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mdata_repair\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'datapreprocessing' is not defined"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import glob\n",
@@ -201,114 +223,11 @@
     "        matdata = io.loadmat(matdata_index[i])\n",
     "        data_new = datapreprocessing(matdata)\n",
     "        data_repair = datarepair(data_new)\n",
-    "        np.save(os.path.join(label_save_path,'%d.npy' %t, data_repair))\n",
-    "        inputdata =         "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'__header__': b'MATLAB 5.0 MAT-file, Platform: PCWIN64, Created on: Thu Mar  9 15:38:09 2023', '__version__': '1.0', '__globals__': [], 'ans': array([[[0.00000000e+000, 4.38277995e-115, 4.29334511e-034, ...,\n",
-      "         4.29334511e-034, 4.38277995e-115, 0.00000000e+000],\n",
-      "        [0.00000000e+000, 2.09873437e-148, 9.51465508e-054, ...,\n",
-      "         9.51465507e-054, 2.09873437e-148, 0.00000000e+000],\n",
-      "        [0.00000000e+000, 2.56415673e-214, 2.48411435e-087, ...,\n",
-      "         2.48411435e-087, 2.56415672e-214, 0.00000000e+000],\n",
-      "        ...,\n",
-      "        [0.00000000e+000, 0.00000000e+000, 0.00000000e+000, ...,\n",
-      "         0.00000000e+000, 0.00000000e+000, 0.00000000e+000],\n",
-      "        [0.00000000e+000, 0.00000000e+000, 0.00000000e+000, ...,\n",
-      "         0.00000000e+000, 0.00000000e+000, 0.00000000e+000],\n",
-      "        [0.00000000e+000, 0.00000000e+000, 0.00000000e+000, ...,\n",
-      "         0.00000000e+000, 0.00000000e+000, 0.00000000e+000]],\n",
-      "\n",
-      "       [[0.00000000e+000, 2.82362572e-159, 2.89202977e-075, ...,\n",
-      "         2.89202977e-075, 2.82362572e-159, 0.00000000e+000],\n",
-      "        [0.00000000e+000, 2.25563102e-220, 3.54574256e-105, ...,\n",
-      "         3.54574256e-105, 2.25563102e-220, 0.00000000e+000],\n",
-      "        [0.00000000e+000, 0.00000000e+000, 1.40532918e-143, ...,\n",
-      "         1.40532918e-143, 0.00000000e+000, 0.00000000e+000],\n",
-      "        ...,\n",
-      "        [0.00000000e+000, 0.00000000e+000, 0.00000000e+000, ...,\n",
-      "         0.00000000e+000, 0.00000000e+000, 0.00000000e+000],\n",
-      "        [0.00000000e+000, 0.00000000e+000, 0.00000000e+000, ...,\n",
-      "         0.00000000e+000, 0.00000000e+000, 0.00000000e+000],\n",
-      "        [0.00000000e+000, 0.00000000e+000, 0.00000000e+000, ...,\n",
-      "         0.00000000e+000, 0.00000000e+000, 0.00000000e+000]],\n",
-      "\n",
-      "       [[0.00000000e+000, 1.71087752e-284, 1.07144132e-187, ...,\n",
-      "         1.07144132e-187, 1.71087752e-284, 0.00000000e+000],\n",
-      "        [0.00000000e+000, 0.00000000e+000, 5.24787633e-225, ...,\n",
-      "         5.24787632e-225, 0.00000000e+000, 0.00000000e+000],\n",
-      "        [0.00000000e+000, 0.00000000e+000, 3.45497937e-247, ...,\n",
-      "         3.45497937e-247, 0.00000000e+000, 0.00000000e+000],\n",
-      "        ...,\n",
-      "        [0.00000000e+000, 0.00000000e+000, 0.00000000e+000, ...,\n",
-      "         0.00000000e+000, 0.00000000e+000, 0.00000000e+000],\n",
-      "        [0.00000000e+000, 0.00000000e+000, 0.00000000e+000, ...,\n",
-      "         0.00000000e+000, 0.00000000e+000, 0.00000000e+000],\n",
-      "        [0.00000000e+000, 0.00000000e+000, 0.00000000e+000, ...,\n",
-      "         0.00000000e+000, 0.00000000e+000, 0.00000000e+000]],\n",
-      "\n",
-      "       ...,\n",
-      "\n",
-      "       [[0.00000000e+000, 1.71087752e-284, 1.07144132e-187, ...,\n",
-      "         1.07144132e-187, 1.71087752e-284, 0.00000000e+000],\n",
-      "        [0.00000000e+000, 0.00000000e+000, 5.24787633e-225, ...,\n",
-      "         5.24787632e-225, 0.00000000e+000, 0.00000000e+000],\n",
-      "        [0.00000000e+000, 0.00000000e+000, 3.45497937e-247, ...,\n",
-      "         3.45497937e-247, 0.00000000e+000, 0.00000000e+000],\n",
-      "        ...,\n",
-      "        [0.00000000e+000, 0.00000000e+000, 0.00000000e+000, ...,\n",
-      "         0.00000000e+000, 0.00000000e+000, 0.00000000e+000],\n",
-      "        [0.00000000e+000, 0.00000000e+000, 0.00000000e+000, ...,\n",
-      "         0.00000000e+000, 0.00000000e+000, 0.00000000e+000],\n",
-      "        [0.00000000e+000, 0.00000000e+000, 0.00000000e+000, ...,\n",
-      "         0.00000000e+000, 0.00000000e+000, 0.00000000e+000]],\n",
-      "\n",
-      "       [[0.00000000e+000, 2.82362572e-159, 2.89202977e-075, ...,\n",
-      "         2.89202977e-075, 2.82362572e-159, 0.00000000e+000],\n",
-      "        [0.00000000e+000, 2.25563102e-220, 3.54574256e-105, ...,\n",
-      "         3.54574256e-105, 2.25563102e-220, 0.00000000e+000],\n",
-      "        [0.00000000e+000, 0.00000000e+000, 1.40532918e-143, ...,\n",
-      "         1.40532918e-143, 0.00000000e+000, 0.00000000e+000],\n",
-      "        ...,\n",
-      "        [0.00000000e+000, 0.00000000e+000, 0.00000000e+000, ...,\n",
-      "         0.00000000e+000, 0.00000000e+000, 0.00000000e+000],\n",
-      "        [0.00000000e+000, 0.00000000e+000, 0.00000000e+000, ...,\n",
-      "         0.00000000e+000, 0.00000000e+000, 0.00000000e+000],\n",
-      "        [0.00000000e+000, 0.00000000e+000, 0.00000000e+000, ...,\n",
-      "         0.00000000e+000, 0.00000000e+000, 0.00000000e+000]],\n",
-      "\n",
-      "       [[0.00000000e+000, 4.38277995e-115, 4.29334511e-034, ...,\n",
-      "         4.29334511e-034, 4.38277995e-115, 0.00000000e+000],\n",
-      "        [0.00000000e+000, 2.09873437e-148, 9.51465508e-054, ...,\n",
-      "         9.51465507e-054, 2.09873437e-148, 0.00000000e+000],\n",
-      "        [0.00000000e+000, 2.56415673e-214, 2.48411435e-087, ...,\n",
-      "         2.48411435e-087, 2.56415672e-214, 0.00000000e+000],\n",
-      "        ...,\n",
-      "        [0.00000000e+000, 0.00000000e+000, 0.00000000e+000, ...,\n",
-      "         0.00000000e+000, 0.00000000e+000, 0.00000000e+000],\n",
-      "        [0.00000000e+000, 0.00000000e+000, 0.00000000e+000, ...,\n",
-      "         0.00000000e+000, 0.00000000e+000, 0.00000000e+000],\n",
-      "        [0.00000000e+000, 0.00000000e+000, 0.00000000e+000, ...,\n",
-      "         0.00000000e+000, 0.00000000e+000, 0.00000000e+000]]])}\n"
-     ]
-    }
-   ],
-   "source": [
-    "import scipy.io as io\n",
-    "import glob\n",
-    "import os\n",
-    "matdata_path = glob.glob('../../Matlab_files/Matlab_files/matdata/*.mat')\n",
-    "data_index = io.loadmat(matdata_path[0])\n",
-    "print(data_index)"
+    "        np.save(os.path.join(label_save_path,'%d.npy' %t),data_repair)\n",
+    "        inputdata = generate_input(data_repair)\n",
+    "        input_save_path = label_save_path.replace('label/','input/')\n",
+    "        np.save(os.path.join(input_save_path, '%d.npy' %t),inputdata)\n",
+    "print('数据集制作完成')"
    ]
   }
  ],
