--- a/test/体素化/test.ipynb
+++ b/test/体素化/test.ipynb
@@ -1453,7 +1453,8 @@
     "ax.set_xlim(0, 150)\n",
     "ax.set_ylim(0, 150)\n",
     "ax.set_zlim(75, -75)\n",
-    "ax.voxels(data_new, facecolors=colorsvalues,edgecolors = 'k', shade = False)\n"
+    "ax.voxels(data_new, facecolors=colorsvalues,edgecolors = 'k', shade = False)\n",
+    "#update"
    ]
   },
   {
