--- a/###TOPO_Post_Processing###/###3dunet###/train/train.ipynb
+++ b/###TOPO_Post_Processing###/###3dunet###/train/train.ipynb
@@ -252,7 +252,7 @@
     "                                               batch_size=batch_size,\n",
     "                                               shuffle=True)\n",
     "    optimizer = optim.Adam(net.parameters(), lr=lr)\n",
-    "    criterion = nn.BCEWithLogitsLoss()\n",
+    "    criterion = nn.MSELoss()\n",
     "    best_loss = float('inf')\n",
     "\n",
     "    for epoch in range(epochs):\n",
