--- a/Generate_dataset/test/体素化/体素模型修复代码（2023.02.22）.ipynb
+++ b/Generate_dataset/test/体素化/体素模型修复代码（2023.02.22）.ipynb
@@ -1265,7 +1265,7 @@
     "\n",
     "\n",
     "#查找模型存在的单共享边等断裂结构\n",
-    "label_data = np.zeros((120, 120, 120))\n",
+    "defect_data = np.zeros((120, 120, 120))\n",
     "face_voxel = []\n",
     "search_list = np.zeros((1, 6, 3))\n",
     "n = 0\n",
@@ -1293,7 +1293,7 @@
     "                if sum_value == 0 or sum_value == 1:\n",
     "                    x, z, y = i, j ,k\n",
     "                    print('i,j,k:',i, j, k)\n",
-    "                    label_data[i-2:i+2,j-2:j+2,k-2:k+2] = data_new[i-2:i+2,j-2:j+2,k-2:k+2]\n",
+    "                    defect_data[i-2:i+2,j-2:j+2,k-2:k+2] = data_new[i-2:i+2,j-2:j+2,k-2:k+2]\n",
     "                    face_voxel_index = np.array([[[x-1, z, y],\n",
     "                                                 [x+1, z, y],\n",
     "                                                 [x, z-1, y],\n",
@@ -1324,14 +1324,14 @@
     "#         data_new[index_x, index_z, index_y] = 1\n",
     "\n",
     "\n",
-    "io.savemat('C:/Users/11573/Desktop/data/test1_2.mat',{'labeldata':label_data})\n",
+    "io.savemat('C:/Users/11573/Desktop/data/test1_2.mat',{'defectdata':defect_data})\n",
     "# # io.savemat('C:/Users/11573/Desktop/VSCode_repos/Matlab_files/top3d_Model_6/topModel_6_repair.mat',{'repairdata':data_new})\n",
     "\n",
     "\n",
     "# # #抓取的缺陷结构三维可视化\n",
     "mycolormap = plt.get_cmap('winter')\n",
-    "label_data_max = label_data.max()\n",
-    "relativevalue = np.round(label_data / label_data_max, 1)\n",
+    "defect_data_max = defect_data.max()\n",
+    "relativevalue = np.round(defect_data / defect_data_max, 1)\n",
     "colorsvalues = mycolormap(relativevalue)\n",
     "fig = plt.figure(figsize=(15, 15))\n",
     "ax = fig.add_subplot(projection='3d')\n",
@@ -1341,7 +1341,7 @@
     "ax.set_xlim(0, 150)\n",
     "ax.set_ylim(0, 150)\n",
     "ax.set_zlim(75, -75)\n",
-    "ax.voxels(label_data, facecolors=colorsvalues,edgecolors = 'k', shade = False)\n",
+    "ax.voxels(defect_data, facecolors=colorsvalues,edgecolors = 'k', shade = False)\n",
     "\n",
     "# # #修补后整体结构三维可视化\n",
     "mycolormap = plt.get_cmap('winter')\n",
