--- a/Generate_dataset/test/体素化/体素模型结构随机断开代码.ipynb
+++ b/Generate_dataset/test/体素化/体素模型结构随机断开代码.ipynb
@@ -205,6 +205,24 @@
     " \n",
     "print('数据集制作完成')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scipy.io as io\n",
+    "import numpy as np\n",
+    "import glob\n",
+    "import os\n",
+    "\n",
+    "\n",
+    "inpudata_addr = '../../'\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
@@ -214,7 +232,15 @@
    "name": "pytorch_cpu"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.8.16"
   },
   "orig_nbformat": 4
