--- a/Generate_dataset/test/体素化/体素模型修复代码（2023.02.22）.ipynb
+++ b/Generate_dataset/test/体素化/体素模型修复代码（2023.02.22）.ipynb
@@ -2,19 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "数据初始维度： (20, 60, 16)\n",
-      "数据调整后维度： (60, 16, 20)\n",
+      "数据初始维度： (20, 50, 16)\n",
+      "数据调整后维度： (50, 16, 20)\n",
       "数据标准化后维度： (120, 120, 120)\n",
       "[[ 0  0  0]\n",
-      " [74 56 67]\n",
-      " [74 63 67]]\n"
+      " [42 59 63]\n",
+      " [42 60 63]\n",
+      " [65 52 58]\n",
+      " [65 67 58]\n",
+      " [68 53 57]\n",
+      " [68 66 57]\n",
+      " [71 57 56]\n",
+      " [71 62 56]\n",
+      " [73 58 55]\n",
+      " [73 61 55]\n",
+      " [74 56 65]\n",
+      " [74 63 65]\n",
+      " [76 57 66]\n",
+      " [76 62 66]\n",
+      " [78 57 52]\n",
+      " [78 62 52]]\n"
      ]
     }
    ],
@@ -27,7 +41,7 @@
     "\n",
     "\n",
     "#数据读取与质量预处理\n",
-    "data = io.loadmat('../../Matlab_files/top3d_Model_5/topModel_5.mat')\n",
+    "data = io.loadmat('../../Matlab_files/top3d_Model_9/topModel_9.mat')\n",
     "data = data['data']\n",
     "data = np.array(data)\n",
     "print('数据初始维度：',data.shape)\n",
@@ -60,9 +74,9 @@
     "\n",
     "#尺寸标准化后模型可视化\n",
     "#测试保存\n",
-    "io.savemat('C:/Users/11573/Desktop/data/standardinizetest.mat',{'standarddata':data_new})\n",
+    "# io.savemat('C:/Users/11573/Desktop/data/standardinizetest.mat',{'standarddata':data_new})\n",
     "#正式保存\n",
-    "# io.savemat('../../Matlab_files/top3d_Model_9/standard_topModel_9.mat',{'standarddata':data_new})\n",
+    "io.savemat('../../Matlab_files/top3d_Model_9/standard_topModel_9.mat',{'standarddata':data_new})\n",
     "# mycolormap = plt.get_cmap('winter')\n",
     "# data_new_max = data_new.max()\n",
     "# relativevalue = np.round(data_new / data_new_max, 1)\n",
@@ -134,39 +148,47 @@
     "    x1, y1, z1 = exam_index[0], exam_index[1], exam_index[2]\n",
     "    defect_model[x1][y1][z1] = 1\n",
     "defect_data = defect_data + defect_model\n",
-    "\n",
+    "# Top3dSTL_v3('C:\\Users\\11573\\Desktop\\VSCode_repos\\Generate_dataset\\Matlab_files\\top3d_Model_1\\repairtopModel_1.STL',repairdata,'Format','binary','Mode','iso')\n",
     "#修复模型\n",
-    "# data_new[54][52][69] = 1\n",
-    "# data_new[54][67][69] = 1\n",
-    "# data_new[61][54][54] = 1\n",
-    "# data_new[61][65][54] = 1\n",
     "\n",
-    "# data_new[67][58][57] = 1\n",
-    "# data_new[67][58][60] = 1\n",
-    "# data_new[68][58][59] = 1\n",
-    "# data_new[68][58][62] = 1\n",
-    "# data_new[69][58][61] = 1\n",
-    "# data_new[69][58][64] = 1\n",
-    "# data_new[70][58][63] = 1\n",
-    "# data_new[70][58][66] = 1\n",
-    "# data_new[71][58][65] = 1\n",
-    "# data_new[71][58][68] = 1\n",
-    "# data_new[71][58][69] = 1\n",
-    "# data_new[72][58][67] = 1\n",
-    "# data_new[72][58][69] = 1\n",
-    "\n",
-    "# data_new[73][58][67] = 1\n",
-    "# data_new[73][58][69] = 1\n",
-    "# data_new[74][58][68] = 1\n",
-    "# data_new[74][58][69] = 1\n",
-    "# data_new[75][58][66] = 1\n",
-    "# data_new[77][58][65] = 1\n",
-    "# data_new[79][58][64] = 1\n",
-    "# data_new[81][58][63] = 1\n",
-    "# data_new[83][58][63] = 1\n",
-    "\n",
-    "# data_new[67][61][57] = 1\n",
-    "# data_new[67][61][60] = 1\n",
+    "data_new[44][59][67] = 1\n",
+    "data_new[44][60][67] = 1\n",
+    "data_new[47][59][68] = 1\n",
+    "data_new[47][60][68] = 1\n",
+    "data_new[49][59][69] = 1\n",
+    "data_new[49][60][69] = 1\n",
+    "data_new[41][60][63] = 1\n",
+    "data_new[41][59][63] = 1\n",
+    "data_new[65][52][59] = 1\n",
+    "data_new[65][67][59] = 1\n",
+    "data_new[67][53][57] = 1\n",
+    "data_new[67][66][57] = 1\n",
+    "data_new[71][57][55] = 1\n",
+    "data_new[71][62][55] = 1\n",
+    "data_new[70][57][56] = 1\n",
+    "data_new[70][62][56] = 1\n",
+    "data_new[73][58][54] = 1\n",
+    "data_new[73][61][54] = 1\n",
+    "data_new[72][58][55] = 1\n",
+    "data_new[72][61][55] = 1\n",
+    "data_new[73][56][65] = 1\n",
+    "data_new[73][63][65] = 1\n",
+    "data_new[75][56][65] = 1\n",
+    "data_new[75][63][65] = 1\n",
+    "data_new[75][58][66] = 1\n",
+    "data_new[75][61][66] = 1\n",
+    "data_new[76][57][65] = 1\n",
+    "data_new[76][62][65] = 1\n",
+    "data_new[77][57][66] = 1\n",
+    "data_new[77][62][66] = 1\n",
+    "data_new[77][57][52] = 1\n",
+    "data_new[77][62][52] = 1\n",
+    "data_new[79][57][52] = 1\n",
+    "data_new[79][62][52] = 1\n",
+    "data_new[76][59][68] = 1\n",
+    "data_new[76][60][68] = 1\n",
+    "data_new[77][59][51] = 1\n",
+    "data_new[77][60][51] = 1\n",
     "# data_new[68][61][59] = 1\n",
     "# data_new[68][61][62] = 1\n",
     "# data_new[69][61][61] = 1\n",
@@ -206,11 +228,11 @@
     "#         data_new[index_x, index_z, index_y] = 1\n",
     "\n",
     "#测试保存\n",
-    "io.savemat('C:/Users/11573/Desktop/data/defecttopModel_5.mat',{'defectdata':defect_data})\n",
+    "# io.savemat('C:/Users/11573/Desktop/data/defecttopModel.mat',{'defectdata':defect_data})\n",
     "\n",
-    "#正式保存\n",
-    "# io.savemat('../../Matlab_files/top3d_Model_8/defecttopModel_8.mat',{'defectdata':defect_data})\n",
-    "# io.savemat('../../Matlab_files/top3d_Model_8/repairtopModel_8.mat',{'repairdata':data_new})\n",
+    "# #正式保存\n",
+    "io.savemat('../../Matlab_files/top3d_Model_9/defecttopModel_9.mat',{'defectdata':defect_data})\n",
+    "io.savemat('../../Matlab_files/top3d_Model_9/repairtopModel_9.mat',{'repairdata':data_new})\n",
     "\n",
     "# # #抓取的缺陷结构三维可视化\n",
     "# mycolormap = plt.get_cmap('winter')\n",
@@ -241,16 +263,6 @@
     "# ax.set_ylim(0, 150)\n",
     "# ax.set_zlim(75, -75)\n",
     "# ax.voxels(data_new, facecolors=colorsvalues,edgecolors = 'k', shade = False)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = len(defect_index)\n",
-    "print(a)"
    ]
   }
  ],
