--- a/Generate_dataset/test/体素化/test.ipynb
+++ b/Generate_dataset/test/体素化/test.ipynb
@@ -52,6 +52,83 @@
     "    print('test_i:',i)\n",
     "    print(\"train_data: %s, test_data %s\" % (train_data, test_data))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0. 0. 0. ... 0. 0. 0.]\n",
+      "  [0. 0. 0. ... 0. 0. 0.]\n",
+      "  [0. 0. 0. ... 0. 0. 0.]\n",
+      "  ...\n",
+      "  [0. 0. 0. ... 0. 0. 0.]\n",
+      "  [0. 0. 0. ... 0. 0. 0.]\n",
+      "  [0. 0. 0. ... 0. 0. 0.]]\n",
+      "\n",
+      " [[0. 0. 0. ... 0. 0. 0.]\n",
+      "  [0. 0. 0. ... 0. 0. 0.]\n",
+      "  [0. 0. 0. ... 0. 0. 0.]\n",
+      "  ...\n",
+      "  [0. 0. 0. ... 0. 0. 0.]\n",
+      "  [0. 0. 0. ... 0. 0. 0.]\n",
+      "  [0. 0. 0. ... 0. 0. 0.]]\n",
+      "\n",
+      " [[0. 0. 0. ... 0. 0. 0.]\n",
+      "  [0. 0. 0. ... 0. 0. 0.]\n",
+      "  [0. 0. 0. ... 0. 0. 0.]\n",
+      "  ...\n",
+      "  [0. 0. 0. ... 0. 0. 0.]\n",
+      "  [0. 0. 0. ... 0. 0. 0.]\n",
+      "  [0. 0. 0. ... 0. 0. 0.]]\n",
+      "\n",
+      " ...\n",
+      "\n",
+      " [[0. 0. 0. ... 0. 0. 0.]\n",
+      "  [0. 0. 0. ... 0. 0. 0.]\n",
+      "  [0. 0. 0. ... 0. 0. 0.]\n",
+      "  ...\n",
+      "  [0. 0. 0. ... 0. 0. 0.]\n",
+      "  [0. 0. 0. ... 0. 0. 0.]\n",
+      "  [0. 0. 0. ... 0. 0. 0.]]\n",
+      "\n",
+      " [[0. 0. 0. ... 0. 0. 0.]\n",
+      "  [0. 0. 0. ... 0. 0. 0.]\n",
+      "  [0. 0. 0. ... 0. 0. 0.]\n",
+      "  ...\n",
+      "  [0. 0. 0. ... 0. 0. 0.]\n",
+      "  [0. 0. 0. ... 0. 0. 0.]\n",
+      "  [0. 0. 0. ... 0. 0. 0.]]\n",
+      "\n",
+      " [[0. 0. 0. ... 0. 0. 0.]\n",
+      "  [0. 0. 0. ... 0. 0. 0.]\n",
+      "  [0. 0. 0. ... 0. 0. 0.]\n",
+      "  ...\n",
+      "  [0. 0. 0. ... 0. 0. 0.]\n",
+      "  [0. 0. 0. ... 0. 0. 0.]\n",
+      "  [0. 0. 0. ... 0. 0. 0.]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np \n",
+    "import scipy.io as io\n",
+    "data = np.load('../../result/result.npy')\n",
+    "for i in range(120):\n",
+    "    for j in range(120):\n",
+    "        for k in range(120):\n",
+    "            if data[i][j][k] != 0:\n",
+    "                if data[i][j][k] > 0.4:\n",
+    "                    data[i][j][k] = 1\n",
+    "                else:\n",
+    "                    data[i][j][k] = 0;\n",
+    "io.savemat('../../result/result.mat',{'result':data})\n",
+    "print(data)"
+   ]
   }
  ],
  "metadata": {
