--- a/Generate_dataset/test/体素化/体素模型修复代码（2023.02.22）.ipynb
+++ b/Generate_dataset/test/体素化/体素模型修复代码（2023.02.22）.ipynb
@@ -2,33 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "数据初始维度： (20, 50, 16)\n",
-      "数据调整后维度： (50, 16, 20)\n",
+      "数据初始维度： (30, 50, 30)\n",
+      "数据调整后维度： (50, 30, 30)\n",
       "数据标准化后维度： (120, 120, 120)\n",
       "[[ 0  0  0]\n",
-      " [42 59 63]\n",
-      " [42 60 63]\n",
-      " [65 52 58]\n",
-      " [65 67 58]\n",
-      " [68 53 57]\n",
-      " [68 66 57]\n",
-      " [71 57 56]\n",
-      " [71 62 56]\n",
-      " [73 58 55]\n",
-      " [73 61 55]\n",
-      " [74 56 65]\n",
-      " [74 63 65]\n",
-      " [76 57 66]\n",
-      " [76 62 66]\n",
-      " [78 57 52]\n",
-      " [78 62 52]]\n"
+      " [47 53 49]\n",
+      " [47 53 70]\n",
+      " [47 66 49]\n",
+      " [47 66 70]\n",
+      " [48 54 48]\n",
+      " [48 54 71]\n",
+      " [48 65 48]\n",
+      " [48 65 71]\n",
+      " [61 49 55]\n",
+      " [61 49 64]\n",
+      " [61 70 55]\n",
+      " [61 70 64]\n",
+      " [68 48 56]\n",
+      " [68 48 63]\n",
+      " [68 71 56]\n",
+      " [68 71 63]]\n"
      ]
     }
    ],
@@ -41,7 +41,7 @@
     "\n",
     "\n",
     "#数据读取与质量预处理\n",
-    "data = io.loadmat('../../Matlab_files/top3d_Model_9/topModel_9.mat')\n",
+    "data = io.loadmat('../../Matlab_files/testset/top3d_Model_10/topModel_10.mat')\n",
     "data = data['data']\n",
     "data = np.array(data)\n",
     "print('数据初始维度：',data.shape)\n",
@@ -76,7 +76,7 @@
     "#测试保存\n",
     "# io.savemat('C:/Users/11573/Desktop/data/standardinizetest.mat',{'standarddata':data_new})\n",
     "#正式保存\n",
-    "io.savemat('../../Matlab_files/top3d_Model_9/standard_topModel_9.mat',{'standarddata':data_new})\n",
+    "io.savemat('../../Matlab_files/testset/top3d_Model_10/standard_topModel_10.mat',{'standarddata':data_new})\n",
     "# mycolormap = plt.get_cmap('winter')\n",
     "# data_new_max = data_new.max()\n",
     "# relativevalue = np.round(data_new / data_new_max, 1)\n",
@@ -151,44 +151,44 @@
     "# Top3dSTL_v3('C:\\Users\\11573\\Desktop\\VSCode_repos\\Generate_dataset\\Matlab_files\\top3d_Model_1\\repairtopModel_1.STL',repairdata,'Format','binary','Mode','iso')\n",
     "#修复模型\n",
     "\n",
-    "data_new[44][59][67] = 1\n",
-    "data_new[44][60][67] = 1\n",
-    "data_new[47][59][68] = 1\n",
-    "data_new[47][60][68] = 1\n",
-    "data_new[49][59][69] = 1\n",
-    "data_new[49][60][69] = 1\n",
-    "data_new[41][60][63] = 1\n",
-    "data_new[41][59][63] = 1\n",
-    "data_new[65][52][59] = 1\n",
-    "data_new[65][67][59] = 1\n",
-    "data_new[67][53][57] = 1\n",
-    "data_new[67][66][57] = 1\n",
-    "data_new[71][57][55] = 1\n",
-    "data_new[71][62][55] = 1\n",
-    "data_new[70][57][56] = 1\n",
-    "data_new[70][62][56] = 1\n",
-    "data_new[73][58][54] = 1\n",
-    "data_new[73][61][54] = 1\n",
-    "data_new[72][58][55] = 1\n",
-    "data_new[72][61][55] = 1\n",
-    "data_new[73][56][65] = 1\n",
-    "data_new[73][63][65] = 1\n",
-    "data_new[75][56][65] = 1\n",
-    "data_new[75][63][65] = 1\n",
-    "data_new[75][58][66] = 1\n",
-    "data_new[75][61][66] = 1\n",
-    "data_new[76][57][65] = 1\n",
-    "data_new[76][62][65] = 1\n",
-    "data_new[77][57][66] = 1\n",
-    "data_new[77][62][66] = 1\n",
-    "data_new[77][57][52] = 1\n",
-    "data_new[77][62][52] = 1\n",
-    "data_new[79][57][52] = 1\n",
-    "data_new[79][62][52] = 1\n",
-    "data_new[76][59][68] = 1\n",
-    "data_new[76][60][68] = 1\n",
-    "data_new[77][59][51] = 1\n",
-    "data_new[77][60][51] = 1\n",
+    "# data_new[44][59][67] = 1\n",
+    "# data_new[44][60][67] = 1\n",
+    "# data_new[47][59][68] = 1\n",
+    "# data_new[47][60][68] = 1\n",
+    "# data_new[49][59][69] = 1\n",
+    "# data_new[49][60][69] = 1\n",
+    "# data_new[41][60][63] = 1\n",
+    "# data_new[41][59][63] = 1\n",
+    "# data_new[65][52][59] = 1\n",
+    "# data_new[65][67][59] = 1\n",
+    "# data_new[67][53][57] = 1\n",
+    "# data_new[67][66][57] = 1\n",
+    "# data_new[71][57][55] = 1\n",
+    "# data_new[71][62][55] = 1\n",
+    "# data_new[70][57][56] = 1\n",
+    "# data_new[70][62][56] = 1\n",
+    "# data_new[73][58][54] = 1\n",
+    "# data_new[73][61][54] = 1\n",
+    "# data_new[72][58][55] = 1\n",
+    "# data_new[72][61][55] = 1\n",
+    "# data_new[73][56][65] = 1\n",
+    "# data_new[73][63][65] = 1\n",
+    "# data_new[75][56][65] = 1\n",
+    "# data_new[75][63][65] = 1\n",
+    "# data_new[75][58][66] = 1\n",
+    "# data_new[75][61][66] = 1\n",
+    "# data_new[76][57][65] = 1\n",
+    "# data_new[76][62][65] = 1\n",
+    "# data_new[77][57][66] = 1\n",
+    "# data_new[77][62][66] = 1\n",
+    "# data_new[77][57][52] = 1\n",
+    "# data_new[77][62][52] = 1\n",
+    "# data_new[79][57][52] = 1\n",
+    "# data_new[79][62][52] = 1\n",
+    "# data_new[76][59][68] = 1\n",
+    "# data_new[76][60][68] = 1\n",
+    "# data_new[77][59][51] = 1\n",
+    "# data_new[77][60][51] = 1\n",
     "# data_new[68][61][59] = 1\n",
     "# data_new[68][61][62] = 1\n",
     "# data_new[69][61][61] = 1\n",
@@ -231,8 +231,8 @@
     "# io.savemat('C:/Users/11573/Desktop/data/defecttopModel.mat',{'defectdata':defect_data})\n",
     "\n",
     "# #正式保存\n",
-    "io.savemat('../../Matlab_files/top3d_Model_9/defecttopModel_9.mat',{'defectdata':defect_data})\n",
-    "io.savemat('../../Matlab_files/top3d_Model_9/repairtopModel_9.mat',{'repairdata':data_new})\n",
+    "# io.savemat('../../Matlab_files/top3d_Model_10/defecttopModel_10.mat',{'defectdata':defect_data})\n",
+    "# io.savemat('../../Matlab_files/top3d_Model_10/repairtopModel_10.mat',{'repairdata':data_new})\n",
     "\n",
     "# # #抓取的缺陷结构三维可视化\n",
     "# mycolormap = plt.get_cmap('winter')\n",
