--- a/NeuralNet_test/###TOPO_Post_Processing###/###3dunet###/train/train_04_03.ipynb
+++ b/NeuralNet_test/###TOPO_Post_Processing###/###3dunet###/train/train_04_03.ipynb
@@ -52,8 +52,8 @@
     "import torch\n",
     "from torch.utils.data import Dataset, DataLoader\n",
     "import numpy as np\n",
-    "\n",
-    "\n",
+    "from torch.utils.tensorboard import SummaryWriter\n",
+    "writer = SummaryWriter('./loss/')\n",
     "class Generate_Dataset(Dataset):\n",
     "    def __init__(self, path):\n",
     "        self.path = path\n",
@@ -16846,9 +16846,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "topopt",
+   "display_name": "python pytorch_cpu",
    "language": "python",
-   "name": "python3"
+   "name": "pytorch_cpu"
   },
   "language_info": {
    "codemirror_mode": {
