--- a/Generate_dataset/test/体素化/体素模型修复代码（2023.02.22）.ipynb
+++ b/Generate_dataset/test/体素化/体素模型修复代码（2023.02.22）.ipynb
@@ -2,33 +2,63 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "数据初始维度： (30, 50, 30)\n",
-      "数据调整后维度： (50, 30, 30)\n",
+      "数据初始维度： (20, 60, 4)\n",
+      "数据调整后维度： (60, 4, 20)\n",
       "数据标准化后维度： (120, 120, 120)\n",
       "[[ 0  0  0]\n",
-      " [47 53 49]\n",
-      " [47 53 70]\n",
-      " [47 66 49]\n",
-      " [47 66 70]\n",
-      " [48 54 48]\n",
-      " [48 54 71]\n",
-      " [48 65 48]\n",
-      " [48 65 71]\n",
-      " [61 49 55]\n",
-      " [61 49 64]\n",
-      " [61 70 55]\n",
-      " [61 70 64]\n",
-      " [68 48 56]\n",
-      " [68 48 63]\n",
-      " [68 71 56]\n",
-      " [68 71 63]]\n"
+      " [42 58 64]\n",
+      " [42 61 64]\n",
+      " [43 58 63]\n",
+      " [43 61 63]\n",
+      " [67 58 58]\n",
+      " [67 58 59]\n",
+      " [67 61 58]\n",
+      " [67 61 59]\n",
+      " [68 58 60]\n",
+      " [68 58 61]\n",
+      " [68 61 60]\n",
+      " [68 61 61]\n",
+      " [69 58 62]\n",
+      " [69 58 63]\n",
+      " [69 61 62]\n",
+      " [69 61 63]\n",
+      " [70 58 64]\n",
+      " [70 58 65]\n",
+      " [70 61 64]\n",
+      " [70 61 65]\n",
+      " [71 58 66]\n",
+      " [71 58 67]\n",
+      " [71 61 66]\n",
+      " [71 61 67]\n",
+      " [72 58 68]\n",
+      " [72 61 68]\n",
+      " [73 58 68]\n",
+      " [73 61 68]\n",
+      " [74 58 67]\n",
+      " [74 61 67]\n",
+      " [75 58 67]\n",
+      " [75 61 67]\n",
+      " [76 58 66]\n",
+      " [76 61 66]\n",
+      " [77 58 66]\n",
+      " [77 61 66]\n",
+      " [78 58 65]\n",
+      " [78 61 65]\n",
+      " [79 58 65]\n",
+      " [79 61 65]\n",
+      " [80 58 64]\n",
+      " [80 61 64]\n",
+      " [81 58 64]\n",
+      " [81 61 64]\n",
+      " [82 58 63]\n",
+      " [82 61 63]]\n"
      ]
     }
    ],
@@ -41,7 +71,7 @@
     "\n",
     "\n",
     "#数据读取与质量预处理\n",
-    "data = io.loadmat('../../Matlab_files/testset/top3d_Model_10/topModel_10.mat')\n",
+    "data = io.loadmat('../../Matlab_files/top3d_Model_2/iters-200/iters-200-015/topModel_2_200_015.mat')\n",
     "data = data['data']\n",
     "data = np.array(data)\n",
     "print('数据初始维度：',data.shape)\n",
@@ -76,21 +106,7 @@
     "#测试保存\n",
     "# io.savemat('C:/Users/11573/Desktop/data/standardinizetest.mat',{'standarddata':data_new})\n",
     "#正式保存\n",
-    "io.savemat('../../Matlab_files/testset/top3d_Model_10/standard_topModel_10.mat',{'standarddata':data_new})\n",
-    "# mycolormap = plt.get_cmap('winter')\n",
-    "# data_new_max = data_new.max()\n",
-    "# relativevalue = np.round(data_new / data_new_max, 1)\n",
-    "# colorsvalues = mycolormap(relativevalue)\n",
-    "# fig = plt.figure(figsize=(15, 15))\n",
-    "# ax = fig.add_subplot(projection='3d')\n",
-    "# ax.set_xlabel('X Axis')\n",
-    "# ax.set_ylabel('Y Axis')\n",
-    "# ax.set_zlabel('Z Axis')\n",
-    "# ax.set_xlim(0, 150)\n",
-    "# ax.set_ylim(0, 150)\n",
-    "# ax.set_zlim(75, -75)\n",
-    "# ax.voxels(data_new, facecolors=colorsvalues,edgecolors = 'k', shade = False)\n",
-    "\n",
+    "io.savemat('../../Matlab_files/top3d_Model_2/iters-200/iters-200-015/standardtopModel_2_200_015.mat',{'standarddata':data_new})\n",
     "\n",
     "#查找模型存在的单共享边等断裂结构\n",
     "defect_data = np.zeros((120, 120, 120))\n",
@@ -151,32 +167,44 @@
     "# Top3dSTL_v3('C:\\Users\\11573\\Desktop\\VSCode_repos\\Generate_dataset\\Matlab_files\\top3d_Model_1\\repairtopModel_1.STL',repairdata,'Format','binary','Mode','iso')\n",
     "#修复模型\n",
     "\n",
-    "# data_new[44][59][67] = 1\n",
-    "# data_new[44][60][67] = 1\n",
-    "# data_new[47][59][68] = 1\n",
-    "# data_new[47][60][68] = 1\n",
-    "# data_new[49][59][69] = 1\n",
-    "# data_new[49][60][69] = 1\n",
-    "# data_new[41][60][63] = 1\n",
-    "# data_new[41][59][63] = 1\n",
-    "# data_new[65][52][59] = 1\n",
-    "# data_new[65][67][59] = 1\n",
-    "# data_new[67][53][57] = 1\n",
-    "# data_new[67][66][57] = 1\n",
-    "# data_new[71][57][55] = 1\n",
-    "# data_new[71][62][55] = 1\n",
-    "# data_new[70][57][56] = 1\n",
-    "# data_new[70][62][56] = 1\n",
-    "# data_new[73][58][54] = 1\n",
-    "# data_new[73][61][54] = 1\n",
-    "# data_new[72][58][55] = 1\n",
-    "# data_new[72][61][55] = 1\n",
-    "# data_new[73][56][65] = 1\n",
-    "# data_new[73][63][65] = 1\n",
-    "# data_new[75][56][65] = 1\n",
-    "# data_new[75][63][65] = 1\n",
-    "# data_new[75][58][66] = 1\n",
-    "# data_new[75][61][66] = 1\n",
+    "data_new[42][58][63] = 1\n",
+    "data_new[42][61][63] = 1\n",
+    "data_new[66][58][58] = 1\n",
+    "data_new[66][62][58] = 1\n",
+    "data_new[67][58][60] = 1\n",
+    "data_new[67][61][60] = 1\n",
+    "data_new[68][58][62] = 1\n",
+    "data_new[68][61][62] = 1\n",
+    "data_new[69][58][64] = 1\n",
+    "data_new[69][61][64] = 1\n",
+    "data_new[70][58][66] = 1\n",
+    "data_new[70][61][66] = 1\n",
+    "data_new[71][58][68] = 1\n",
+    "data_new[71][61][68] = 1\n",
+    "\n",
+    "data_new[74][58][68] = 1\n",
+    "data_new[74][61][68] = 1\n",
+    "\n",
+    "data_new[76][58][66] = 1\n",
+    "data_new[76][61][66] = 1\n",
+    "\n",
+    "# data_new[85][58][63] = 1\n",
+    "# data_new[85][61][63] = 1\n",
+    "\n",
+    "# data_new[71][56][66] = 1\n",
+    "# data_new[71][63][66] = 1\n",
+    "\n",
+    "# data_new[72][57][68] = 1\n",
+    "# data_new[72][62][68] = 1\n",
+    "\n",
+    "# data_new[76][59][66] = 1\n",
+    "# data_new[76][60][66] = 1\n",
+    "# data_new[33][59][68] = 1\n",
+    "# data_new[33][60][68] = 1\n",
+    "# data_new[36][59][68] = 1\n",
+    "# data_new[36][60][68] = 1\n",
+    "# data_new[78][59][65] = 1\n",
+    "# data_new[78][60][65] = 1\n",
     "# data_new[76][57][65] = 1\n",
     "# data_new[76][62][65] = 1\n",
     "# data_new[77][57][66] = 1\n",
@@ -231,38 +259,8 @@
     "# io.savemat('C:/Users/11573/Desktop/data/defecttopModel.mat',{'defectdata':defect_data})\n",
     "\n",
     "# #正式保存\n",
-    "# io.savemat('../../Matlab_files/top3d_Model_10/defecttopModel_10.mat',{'defectdata':defect_data})\n",
-    "# io.savemat('../../Matlab_files/top3d_Model_10/repairtopModel_10.mat',{'repairdata':data_new})\n",
-    "\n",
-    "# # #抓取的缺陷结构三维可视化\n",
-    "# mycolormap = plt.get_cmap('winter')\n",
-    "# defect_data_max = defect_data.max()\n",
-    "# relativevalue = np.round(defect_data / defect_data_max, 1)\n",
-    "# colorsvalues = mycolormap(relativevalue)\n",
-    "# fig = plt.figure(figsize=(15, 15))\n",
-    "# ax = fig.add_subplot(projection='3d')\n",
-    "# ax.set_xlabel('X Axis')\n",
-    "# ax.set_ylabel('Y Axis')\n",
-    "# ax.set_zlabel('Z Axis')\n",
-    "# ax.set_xlim(0, 150)\n",
-    "# ax.set_ylim(0, 150)\n",
-    "# ax.set_zlim(75, -75)\n",
-    "# ax.voxels(defect_data, facecolors=colorsvalues,edgecolors = 'k', shade = False)\n",
-    "\n",
-    "# # #修补后整体结构三维可视化\n",
-    "# mycolormap = plt.get_cmap('winter')\n",
-    "# data_new_max = data_new.max()\n",
-    "# relativevalue = np.round(data_new / data_new_max, 1)\n",
-    "# colorsvalues = mycolormap(relativevalue)\n",
-    "# fig = plt.figure(figsize=(15, 15))\n",
-    "# ax = fig.add_subplot(projection='3d')\n",
-    "# ax.set_xlabel('X Axis')\n",
-    "# ax.set_ylabel('Y Axis')\n",
-    "# ax.set_zlabel('Z Axis')\n",
-    "# ax.set_xlim(0, 150)\n",
-    "# ax.set_ylim(0, 150)\n",
-    "# ax.set_zlim(75, -75)\n",
-    "# ax.voxels(data_new, facecolors=colorsvalues,edgecolors = 'k', shade = False)\n"
+    "io.savemat('../../Matlab_files/top3d_Model_2/iters-200/iters-200-015/defecttopModel_2_200_015.mat',{'defectdata':defect_data})\n",
+    "io.savemat('../../Matlab_files/top3d_Model_2/iters-200/iters-200-015/repairtopModel_2_200_015.mat',{'repairdata':data_new})\n"
    ]
   }
  ],
