--- a/Generate_dataset/test/体素化/test.ipynb
+++ b/Generate_dataset/test/体素化/test.ipynb
@@ -2,31 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "train_index:[1 2 3],test_index:[0]\n",
-      "train_index:[0 2 3],test_index:[1]\n",
-      "train_index:[0 1 3],test_index:[2]\n",
-      "train_index:[0 1 2],test_index:[3]\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'i' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 20\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[39mfor\u001b[39;00m train_idx, test_idx \u001b[39min\u001b[39;00m loo\u001b[39m.\u001b[39msplit(data_dim1):\n\u001b[0;32m     19\u001b[0m     train_data \u001b[39m=\u001b[39m [data_dim1[i] \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m train_idx]\n\u001b[1;32m---> 20\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mtrain_i:\u001b[39m\u001b[39m'\u001b[39m,i)\n\u001b[0;32m     21\u001b[0m     test_data \u001b[39m=\u001b[39m [data_dim1[i] \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m test_idx]\n\u001b[0;32m     22\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mtest_i:\u001b[39m\u001b[39m'\u001b[39m,i)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'i' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "from sklearn.model_selection import LeaveOneOut\n",
@@ -55,65 +33,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[[0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  ...\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]]\n",
-      "\n",
-      " [[0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  ...\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]]\n",
-      "\n",
-      " [[0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  ...\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]]\n",
-      "\n",
-      " ...\n",
-      "\n",
-      " [[0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  ...\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]]\n",
-      "\n",
-      " [[0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  ...\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]]\n",
-      "\n",
-      " [[0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  ...\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np \n",
     "import scipy.io as io\n",
@@ -128,6 +50,285 @@
     "                    data[i][j][k] = 0;\n",
     "io.savemat('../../result/result.mat',{'result':data})\n",
     "print(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import torch\n",
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "\n",
+    "random_data = np.random.randn(10,3)\n",
+    "print(random_data)\n",
+    "print(\"#\"*len(random_data))\n",
+    "\n",
+    "\n",
+    "class MyDataSet(Dataset):\n",
+    "    def __init__(self, loaded_data):\n",
+    "        self.data = loaded_data\n",
+    "    \n",
+    "    def __len__(self):\n",
+    "        return len(self.data)\n",
+    "    \n",
+    "    def __getitem__(self, idx):\n",
+    "        return self.data[idx]\n",
+    "    \n",
+    "\n",
+    "custom_dataset = MyDataSet(random_data)\n",
+    "\n",
+    "# for i in range(len(custom_dataset)):\n",
+    "#     print(custom_dataset[i])\n",
+    "    \n",
+    "\n",
+    "train_size = int(len(custom_dataset) * 0.5)\n",
+    "validate_size = int(len(custom_dataset) * 0.2)\n",
+    "test_size = len(custom_dataset) - validate_size - train_size\n",
+    "train_dataset, validate_dataset, test_dataset = torch.utils.data.random_split(custom_dataset, [train_size, validate_size, test_size])\n",
+    "print(train_dataset)\n",
+    "print(validate_dataset)\n",
+    "print(test_dataset)\n",
+    "\n",
+    "train_loader = DataLoader(train_dataset, batch_size=1, shuffle=False, num_workers=0)\n",
+    "validate_loader = DataLoader(validate_dataset, batch_size=1, shuffle=False, num_workers=0)\n",
+    "test_loader = DataLoader(test_dataset, batch_size=1, shuffle=False, num_workers=0)\n",
+    "print('train_loader')\n",
+    "for i, train_sample in enumerate(train_loader):\n",
+    "    print(\"{} {}\".format(i, train_sample))\n",
+    "\n",
+    "print('validate_loader')\n",
+    "for j, validate_sample in enumerate(validate_loader):\n",
+    "    print(\"{} {}\".format(j, validate_sample))\n",
+    "    print('')\n",
+    "print('test_loader')\n",
+    "for k, test_sample in enumerate(test_loader):\n",
+    "    print(\"{} {}\".format(k, test_sample))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib import cm\n",
+    "import numpy as np\n",
+    "\n",
+    "from mpl_toolkits.mplot3d.axes3d import get_test_data\n",
+    "# This import registers the 3D projection, but is otherwise unused.\n",
+    "from mpl_toolkits.mplot3d import Axes3D  # noqa: F401 unused import\n",
+    "\n",
+    "\n",
+    "# set up a figure twice as wide as it is tall\n",
+    "fig = plt.figure(figsize=plt.figaspect(0.5))\n",
+    "\n",
+    "#===============\n",
+    "#  First subplot\n",
+    "#===============\n",
+    "# set up the axes for the first plot\n",
+    "ax = fig.add_subplot(1, 2, 1, projection='3d')\n",
+    "\n",
+    "# plot a 3D surface like in the example mplot3d/surface3d_demo\n",
+    "X = np.arange(-5, 5, 0.25)\n",
+    "Y = np.arange(-5, 5, 0.25)\n",
+    "X, Y = np.meshgrid(X, Y)\n",
+    "R = np.sqrt(X**2 + Y**2)\n",
+    "Z = np.sin(R)\n",
+    "surf = ax.plot_surface(X, Y, Z, rstride=1, cstride=1, cmap=cm.coolwarm,\n",
+    "                       linewidth=0, antialiased=False)\n",
+    "ax.set_zlim(-1.01, 1.01)\n",
+    "fig.colorbar(surf, shrink=0.5, aspect=10)\n",
+    "\n",
+    "#===============\n",
+    "# Second subplot\n",
+    "#===============\n",
+    "# set up the axes for the second plot\n",
+    "ax = fig.add_subplot(1, 2, 2, projection='3d')\n",
+    "\n",
+    "# plot a 3D wireframe like in the example mplot3d/wire3d_demo\n",
+    "X, Y, Z = get_test_data(0.05)\n",
+    "ax.plot_wireframe(X, Y, Z, rstride=10, cstride=10)\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "plt.style.use('seaborn-whitegrid')\n",
+    "import numpy as np\n",
+    "fig = plt.figure()\n",
+    "\n",
+    "x = np.linspace(0, 10, 1000)\n",
+    "plt.plot(x, np.sin(x),label = 'sinx')\n",
+    "plt.plot(x, np.cos(x),label = 'cosx')\n",
+    "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import scipy.io as io\n",
+    "\n",
+    "data = io.loadmat('../../Matlab_files/top3d_Model/top3d_Model_8/standard_topModel_8.mat')\n",
+    "\n",
+    "data = data['standarddata']\n",
+    "data = data[np.newaxis,:,:,:]\n",
+    "print(data.shape)\n",
+    "np.save('test.npy',data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(120, 120, 120)\n",
+      "[[[-1.03742760e-02 -5.45036048e-03 -3.48558836e-03 ... -7.02937692e-03\n",
+      "   -7.77085312e-03  5.73385507e-03]\n",
+      "  [-5.94182871e-03 -1.06201861e-02 -6.71452098e-03 ... -7.77051412e-03\n",
+      "   -1.28220525e-02 -7.71931373e-03]\n",
+      "  [ 8.40634108e-04  1.76358968e-04 -2.40348652e-03 ... -2.52931938e-03\n",
+      "   -2.75519490e-03 -2.50036642e-03]\n",
+      "  ...\n",
+      "  [-3.20736319e-04 -2.07209587e-03 -4.05719876e-03 ... -3.89528275e-03\n",
+      "   -4.75120544e-03 -1.46297179e-03]\n",
+      "  [ 7.61802867e-03  3.28659266e-03 -1.31262094e-03 ... -2.32541375e-03\n",
+      "    9.95211303e-05 -7.70486332e-03]\n",
+      "  [ 2.59225406e-02  1.21097527e-02  6.99020922e-03 ...  5.80128282e-03\n",
+      "    1.05097033e-02  1.66456215e-03]]\n",
+      "\n",
+      " [[-2.52359360e-03  1.04899853e-02  4.60293144e-03 ...  7.18962774e-03\n",
+      "    2.08342075e-03  1.69774927e-02]\n",
+      "  [ 4.37041931e-03 -7.02717714e-03 -7.90504180e-03 ... -7.16729276e-03\n",
+      "   -7.98652880e-03 -4.25042585e-04]\n",
+      "  [ 7.23409839e-03 -4.71457839e-04 -3.59257497e-03 ... -6.55002892e-04\n",
+      "   -3.47723812e-03  2.51596048e-03]\n",
+      "  ...\n",
+      "  [-6.45203516e-04 -1.71282329e-03 -3.15461308e-04 ... -1.99862011e-03\n",
+      "   -3.69740464e-03  5.07798791e-03]\n",
+      "  [ 8.55281390e-03 -2.62019597e-03  1.67950988e-03 ... -4.48524207e-03\n",
+      "   -1.35989673e-03 -4.10672650e-03]\n",
+      "  [ 1.29956566e-03 -1.44934449e-02 -2.49519013e-03 ... -2.16819905e-03\n",
+      "   -8.17226246e-04 -1.05646346e-02]]\n",
+      "\n",
+      " [[-2.33419053e-03  4.09857929e-03 -7.79617578e-04 ... -1.57656893e-03\n",
+      "   -7.13981129e-03  5.88590093e-03]\n",
+      "  [ 5.60242124e-03 -6.79409876e-03 -2.25866027e-03 ... -2.28567235e-03\n",
+      "   -6.30744360e-03 -7.08438270e-03]\n",
+      "  [ 3.91233899e-03 -1.87524781e-03 -2.73305178e-03 ... -1.09794363e-03\n",
+      "   -2.64320709e-03 -7.54101202e-04]\n",
+      "  ...\n",
+      "  [-3.37566994e-03 -3.05926800e-03  1.46000832e-03 ... -1.24085508e-03\n",
+      "   -2.14212760e-03  1.13608688e-03]\n",
+      "  [ 6.17742352e-03  3.26657668e-04  4.83158417e-03 ... -1.11152604e-03\n",
+      "    3.61991301e-03 -1.52575038e-03]\n",
+      "  [-1.00390799e-03 -8.72090645e-03 -4.88938764e-04 ... -7.65422359e-04\n",
+      "    4.12650779e-03 -7.74108805e-03]]\n",
+      "\n",
+      " ...\n",
+      "\n",
+      " [[-1.77569501e-03  6.29265979e-03  7.10925087e-04 ... -7.33038411e-04\n",
+      "   -4.18473594e-03  5.81829716e-03]\n",
+      "  [ 1.95605122e-03 -3.27714905e-03 -4.13441285e-03 ... -3.40702385e-03\n",
+      "   -4.46795486e-03 -8.16228613e-03]\n",
+      "  [ 1.64119713e-03  2.85238028e-04 -1.62005611e-03 ...  1.54189207e-03\n",
+      "   -1.62134506e-03 -1.78210810e-03]\n",
+      "  ...\n",
+      "  [-2.17889436e-03 -2.05107778e-03 -2.14349851e-03 ... -2.64382735e-03\n",
+      "   -4.63839807e-03 -8.40896741e-04]\n",
+      "  [ 6.95809163e-03 -2.06251442e-03  3.83311883e-04 ... -2.40096822e-03\n",
+      "    1.67412125e-03 -6.65305182e-04]\n",
+      "  [ 9.96256247e-04 -3.16590630e-03  4.31083329e-03 ...  6.90209493e-03\n",
+      "    6.96336851e-03 -5.37334569e-03]]\n",
+      "\n",
+      " [[ 4.65048477e-04  4.07214835e-03 -1.06002204e-03 ... -3.56058031e-03\n",
+      "   -7.52875395e-03  5.93131036e-03]\n",
+      "  [ 2.89577432e-03 -7.31289200e-03 -4.44160402e-03 ... -4.55241464e-03\n",
+      "   -8.54555704e-03 -4.97731753e-03]\n",
+      "  [ 4.05647233e-03 -1.56913325e-03  2.52063945e-03 ...  2.27714702e-03\n",
+      "   -1.83098018e-06  5.43196686e-03]\n",
+      "  ...\n",
+      "  [-1.45336613e-04 -6.15352765e-03 -1.06629170e-03 ... -2.34192424e-03\n",
+      "   -3.01889330e-03  3.06905434e-03]\n",
+      "  [ 2.99626030e-03 -6.84012659e-03  1.14563294e-03 ... -8.53868201e-04\n",
+      "    3.54494713e-03  8.14450346e-03]\n",
+      "  [ 3.47129814e-03 -5.23012131e-05  1.24486331e-02 ...  1.09563749e-02\n",
+      "    1.31521616e-02 -3.62132303e-03]]\n",
+      "\n",
+      " [[-4.14185412e-03 -6.63995929e-03 -1.11127440e-02 ... -1.41157825e-02\n",
+      "   -1.84972901e-02 -1.67621691e-02]\n",
+      "  [ 1.90551970e-02 -7.76333734e-04  7.56213441e-04 ...  2.44479068e-03\n",
+      "    1.50878914e-03 -6.62131794e-03]\n",
+      "  [ 1.05459057e-02 -7.09367916e-04  1.30003318e-03 ...  1.95976719e-03\n",
+      "   -1.35984644e-03 -3.17944400e-03]\n",
+      "  ...\n",
+      "  [ 9.27588157e-03 -6.63464889e-04  2.35144794e-03 ...  3.79017740e-03\n",
+      "    5.92723489e-04 -4.80819866e-03]\n",
+      "  [ 9.04056244e-03 -3.32011096e-03 -6.01493753e-03 ... -4.09388542e-03\n",
+      "   -3.69448960e-03 -9.21326317e-03]\n",
+      "  [-2.31208112e-02 -1.28618609e-02 -1.00147408e-02 ... -5.27731888e-03\n",
+      "   -9.36911069e-03 -1.03651825e-02]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import scipy.io as io\n",
+    "import matplotlib.pyplot as plt\n",
+    "data = np.load('./result.npy')\n",
+    "print(data.shape)\n",
+    "print(data)\n",
+    "for i in range(data.shape[0]):\n",
+    "    for j in range(data.shape[1]):\n",
+    "        for k in range(data.shape[2]):\n",
+    "            if data[i][j][k] > 0.5:\n",
+    "                data[i][j][k] = 1\n",
+    "            else:\n",
+    "                data[i][j][k] =0\n",
+    "io.savemat('./result.mat',{'data':data})\n",
+    "\n",
+    "\n",
+    "\n",
+    "# mycolormap = plt.get_cmap('winter')\n",
+    "# data_max = data.max()\n",
+    "# relativevalue = np.round(data / data_max, 1)\n",
+    "# colorsvalues = mycolormap(relativevalue)\n",
+    "# fig = plt.figure(figsize=(10, 10))\n",
+    "# ax = fig.add_subplot(projection='3d')\n",
+    "# ax.set_xlabel('X Axis')\n",
+    "# ax.set_ylabel('Y Axis')\n",
+    "# ax.set_zlabel('Z Axis')\n",
+    "# ax.set_xlim(0, 150)\n",
+    "# ax.set_ylim(0, 150)\n",
+    "# ax.set_zlim(75, -75)\n",
+    "# ax.voxels(data, facecolors=colorsvalues,edgecolors = 'k', shade = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n"
    ]
   }
  ],
