--- a/Generate_dataset/test/体素化/体素模型修复代码（2023.02.22）.ipynb
+++ b/Generate_dataset/test/体素化/体素模型修复代码（2023.02.22）.ipynb
@@ -2,63 +2,85 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "数据初始维度： (20, 60, 4)\n",
-      "数据调整后维度： (60, 4, 20)\n",
+      "数据初始维度： (20, 60, 16)\n",
+      "数据调整后维度： (60, 16, 20)\n",
       "数据标准化后维度： (120, 120, 120)\n",
       "[[ 0  0  0]\n",
-      " [42 58 64]\n",
-      " [42 61 64]\n",
-      " [43 58 63]\n",
-      " [43 61 63]\n",
-      " [67 58 58]\n",
-      " [67 58 59]\n",
-      " [67 61 58]\n",
-      " [67 61 59]\n",
-      " [68 58 60]\n",
-      " [68 58 61]\n",
-      " [68 61 60]\n",
-      " [68 61 61]\n",
-      " [69 58 62]\n",
-      " [69 58 63]\n",
-      " [69 61 62]\n",
-      " [69 61 63]\n",
-      " [70 58 64]\n",
-      " [70 58 65]\n",
-      " [70 61 64]\n",
-      " [70 61 65]\n",
-      " [71 58 66]\n",
-      " [71 58 67]\n",
-      " [71 61 66]\n",
-      " [71 61 67]\n",
-      " [72 58 68]\n",
-      " [72 61 68]\n",
-      " [73 58 68]\n",
-      " [73 61 68]\n",
-      " [74 58 67]\n",
-      " [74 61 67]\n",
-      " [75 58 67]\n",
-      " [75 61 67]\n",
-      " [76 58 66]\n",
-      " [76 61 66]\n",
-      " [77 58 66]\n",
-      " [77 61 66]\n",
-      " [78 58 65]\n",
-      " [78 61 65]\n",
-      " [79 58 65]\n",
-      " [79 61 65]\n",
-      " [80 58 64]\n",
-      " [80 61 64]\n",
-      " [81 58 64]\n",
-      " [81 61 64]\n",
-      " [82 58 63]\n",
-      " [82 61 63]]\n"
+      " [48 57 68]\n",
+      " [49 58 67]\n",
+      " [50 59 66]\n",
+      " [51 59 66]\n",
+      " [52 59 65]\n",
+      " [53 59 64]\n",
+      " [53 60 62]\n",
+      " [54 60 63]\n",
+      " [55 58 63]\n",
+      " [55 60 64]\n",
+      " [55 61 63]\n",
+      " [56 57 61]\n",
+      " [56 57 62]\n",
+      " [56 60 65]\n",
+      " [56 62 61]\n",
+      " [56 62 62]\n",
+      " [57 56 60]\n",
+      " [57 56 61]\n",
+      " [57 60 66]\n",
+      " [57 63 60]\n",
+      " [57 63 61]\n",
+      " [58 55 59]\n",
+      " [58 64 59]\n",
+      " [59 54 58]\n",
+      " [59 65 58]\n",
+      " [61 54 66]\n",
+      " [61 55 67]\n",
+      " [61 64 67]\n",
+      " [61 65 66]\n",
+      " [62 54 57]\n",
+      " [62 54 66]\n",
+      " [62 55 56]\n",
+      " [62 56 55]\n",
+      " [62 63 55]\n",
+      " [62 64 56]\n",
+      " [62 65 57]\n",
+      " [62 65 66]\n",
+      " [63 54 65]\n",
+      " [63 65 65]\n",
+      " [65 52 63]\n",
+      " [65 66 63]\n",
+      " [67 52 63]\n",
+      " [68 53 62]\n",
+      " [68 53 64]\n",
+      " [68 54 61]\n",
+      " [68 65 61]\n",
+      " [68 66 62]\n",
+      " [68 66 64]\n",
+      " [69 54 64]\n",
+      " [69 55 59]\n",
+      " [69 64 59]\n",
+      " [69 65 64]\n",
+      " [70 56 58]\n",
+      " [70 56 59]\n",
+      " [70 56 65]\n",
+      " [70 57 57]\n",
+      " [70 62 57]\n",
+      " [70 63 58]\n",
+      " [70 63 59]\n",
+      " [71 56 66]\n",
+      " [71 57 57]\n",
+      " [71 57 66]\n",
+      " [71 62 57]\n",
+      " [71 62 66]\n",
+      " [72 57 67]\n",
+      " [72 62 67]\n",
+      " [73 58 67]\n",
+      " [73 61 67]]\n"
      ]
     }
    ],
@@ -71,7 +93,7 @@
     "\n",
     "\n",
     "#数据读取与质量预处理\n",
-    "data = io.loadmat('../../Matlab_files/top3d_Model_2/iters-200/iters-200-015/topModel_2_200_015.mat')\n",
+    "data = io.loadmat('../../Matlab_files/top3d_Model_7/iters-180/iters-180-004/topModel_7_180_004.mat')\n",
     "data = data['data']\n",
     "data = np.array(data)\n",
     "print('数据初始维度：',data.shape)\n",
@@ -104,9 +126,9 @@
     "\n",
     "#尺寸标准化后模型可视化\n",
     "#测试保存\n",
-    "# io.savemat('C:/Users/11573/Desktop/data/standardinizetest.mat',{'standarddata':data_new})\n",
+    "io.savemat('C:/Users/11573/Desktop/data/standardinizetest.mat',{'standarddata':data_new})\n",
     "#正式保存\n",
-    "io.savemat('../../Matlab_files/top3d_Model_2/iters-200/iters-200-015/standardtopModel_2_200_015.mat',{'standarddata':data_new})\n",
+    "# io.savemat('../../Matlab_files/top3d_Model_7/iters-180/iters-180-004/standardtopModel_7_180_004.mat',{'standarddata':data_new})\n",
     "\n",
     "#查找模型存在的单共享边等断裂结构\n",
     "defect_data = np.zeros((120, 120, 120))\n",
@@ -167,76 +189,68 @@
     "# Top3dSTL_v3('C:\\Users\\11573\\Desktop\\VSCode_repos\\Generate_dataset\\Matlab_files\\top3d_Model_1\\repairtopModel_1.STL',repairdata,'Format','binary','Mode','iso')\n",
     "#修复模型\n",
     "\n",
-    "data_new[42][58][63] = 1\n",
-    "data_new[42][61][63] = 1\n",
-    "data_new[66][58][58] = 1\n",
-    "data_new[66][62][58] = 1\n",
-    "data_new[67][58][60] = 1\n",
-    "data_new[67][61][60] = 1\n",
-    "data_new[68][58][62] = 1\n",
-    "data_new[68][61][62] = 1\n",
-    "data_new[69][58][64] = 1\n",
-    "data_new[69][61][64] = 1\n",
-    "data_new[70][58][66] = 1\n",
-    "data_new[70][61][66] = 1\n",
-    "data_new[71][58][68] = 1\n",
-    "data_new[71][61][68] = 1\n",
+    "# data_new[49][57][58] = 1\n",
+    "# data_new[49][62][58] = 1\n",
+    "# data_new[55][58][62] = 1\n",
+    "# data_new[55][61][62] = 1\n",
+    "# data_new[56][56][60] = 1\n",
+    "# data_new[56][63][60] = 1\n",
+    "# data_new[58][54][58] = 1\n",
+    "# data_new[58][65][58] = 1\n",
+    "# data_new[62][55][56] = 0\n",
+    "# data_new[62][64][56] = 0\n",
+    "# data_new[64][58][56] = 1\n",
+    "# data_new[64][61][56] = 1\n",
+    "# data_new[63][53][65] = 1\n",
+    "# data_new[63][66][65] = 1\n",
+    "# data_new[71][56][57] = 1\n",
+    "# data_new[71][63][57] = 1\n",
+    "# data_new[58][55][60] = 1\n",
+    "# data_new[58][64][60] = 1\n",
+    "# data_new[59][55][59] = 1\n",
+    "# data_new[59][64][59] = 1\n",
+    "# data_new[59][54][59] = 1\n",
+    "# data_new[59][65][59] = 1\n",
+    "# data_new[59][53][58] = 1\n",
+    "# data_new[59][66][58] = 1\n",
+    "# data_new[59][55][68] = 1\n",
+    "# data_new[59][64][68] = 1\n",
+    "# data_new[61][55][66] = 1\n",
+    "# data_new[61][64][66] = 1\n",
+    "# data_new[63][54][66] = 1\n",
     "\n",
-    "data_new[74][58][68] = 1\n",
-    "data_new[74][61][68] = 1\n",
+    "# data_new[62][54][58] = 1\n",
+    "# data_new[62][65][58] = 1\n",
+    "# data_new[62][53][58] = 1\n",
+    "# data_new[62][66][58] = 1\n",
+    "# data_new[62][54][56] = 1\n",
+    "# data_new[62][65][56] = 1\n",
+    "# data_new[62][55][55] = 1\n",
+    "# data_new[62][64][55] = 1\n",
     "\n",
-    "data_new[76][58][66] = 1\n",
-    "data_new[76][61][66] = 1\n",
+    "# data_new[65][52][62] = 1\n",
+    "# data_new[65][67][63] = 1\n",
+    "# data_new[67][53][63] = 1\n",
     "\n",
-    "# data_new[85][58][63] = 1\n",
-    "# data_new[85][61][63] = 1\n",
+    "# data_new[69][53][64] = 1\n",
+    "# data_new[69][65][64] = 1\n",
+    "# data_new[68][53][61] = 1\n",
     "\n",
-    "# data_new[71][56][66] = 1\n",
-    "# data_new[71][63][66] = 1\n",
     "\n",
-    "# data_new[72][57][68] = 1\n",
-    "# data_new[72][62][68] = 1\n",
+    "# data_new[70][56][57] = 1\n",
+    "# data_new[69][63][57] = 1\n",
     "\n",
-    "# data_new[76][59][66] = 1\n",
+    "# data_new[71][58][57] = 1\n",
+    "# data_new[71][61][57] = 1\n",
+    "# data_new[71][57][67] = 1\n",
+    "\n",
+    "# data_new[73][57][67] = 1\n",
+    "# data_new[73][62][67] = 1\n",
+    "\n",
     "# data_new[76][60][66] = 1\n",
-    "# data_new[33][59][68] = 1\n",
-    "# data_new[33][60][68] = 1\n",
-    "# data_new[36][59][68] = 1\n",
-    "# data_new[36][60][68] = 1\n",
-    "# data_new[78][59][65] = 1\n",
-    "# data_new[78][60][65] = 1\n",
-    "# data_new[76][57][65] = 1\n",
-    "# data_new[76][62][65] = 1\n",
-    "# data_new[77][57][66] = 1\n",
-    "# data_new[77][62][66] = 1\n",
-    "# data_new[77][57][52] = 1\n",
-    "# data_new[77][62][52] = 1\n",
-    "# data_new[79][57][52] = 1\n",
-    "# data_new[79][62][52] = 1\n",
-    "# data_new[76][59][68] = 1\n",
-    "# data_new[76][60][68] = 1\n",
-    "# data_new[77][59][51] = 1\n",
-    "# data_new[77][60][51] = 1\n",
-    "# data_new[68][61][59] = 1\n",
-    "# data_new[68][61][62] = 1\n",
-    "# data_new[69][61][61] = 1\n",
-    "# data_new[69][61][64] = 1\n",
-    "# data_new[70][61][63] = 1\n",
-    "# data_new[70][61][66] = 1\n",
-    "# data_new[71][61][65] = 1\n",
-    "# data_new[71][61][68] = 1\n",
-    "# data_new[71][61][69] = 1\n",
-    "# data_new[72][61][67] = 1\n",
-    "# data_new[72][61][69] = 1\n",
-    "# data_new[73][61][67] = 1\n",
-    "# data_new[73][61][69] = 1\n",
-    "# data_new[74][61][68] = 1\n",
-    "# data_new[74][61][69] = 1\n",
-    "# data_new[75][61][66] = 1\n",
-    "# data_new[77][61][65] = 1\n",
-    "# data_new[79][61][64] = 1\n",
-    "# data_new[81][61][63] = 1\n",
-    "# data_new[83][61][63] = 1\n",
+    "\n",
+    "# data_new[81][60][63] = 1\n",
+    "# data_new[83][60][63] = 1\n",
     "print(defect_index)\n",
     "# print('遍历了：',n,'次')\n",
     "# print('共有',t,'个非零元素')\n",
@@ -246,7 +260,7 @@
     "\n",
     "\n",
     "# # #针对模型缺陷部分进行插补\n",
-    "# for o in range(1,len(search_list)):\n",
+    "# for o in range(1,len(search_list)):970\n",
     "#     repair_index = search_list[o]\n",
     "#     for w in range(6):\n",
     "#         point_index = repair_index[w]\n",
@@ -256,11 +270,11 @@
     "#         data_new[index_x, index_z, index_y] = 1\n",
     "\n",
     "#测试保存\n",
-    "# io.savemat('C:/Users/11573/Desktop/data/defecttopModel.mat',{'defectdata':defect_data})\n",
+    "io.savemat('C:/Users/11573/Desktop/data/defecttopModel.mat',{'defectdata':defect_data})\n",
     "\n",
     "# #正式保存\n",
-    "io.savemat('../../Matlab_files/top3d_Model_2/iters-200/iters-200-015/defecttopModel_2_200_015.mat',{'defectdata':defect_data})\n",
-    "io.savemat('../../Matlab_files/top3d_Model_2/iters-200/iters-200-015/repairtopModel_2_200_015.mat',{'repairdata':data_new})\n"
+    "# io.savemat('../../Matlab_files/top3d_Model_7/iters-180/iters-180-004/defecttopModel_7_180_004.mat',{'defectdata':defect_data})\n",
+    "# io.savemat('../../Matlab_files/top3d_Model_7/iters-180/iters-180-004/repairtopModel_7_180_004.mat',{'repairdata':data_new})\n"
    ]
   }
  ],
