--- a/Generate_dataset/test/体素化/体素模型修复代码（2023.02.22）.ipynb
+++ b/Generate_dataset/test/体素化/体素模型修复代码（2023.02.22）.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -13,74 +13,35 @@
       "数据调整后维度： (60, 16, 20)\n",
       "数据标准化后维度： (120, 120, 120)\n",
       "[[ 0  0  0]\n",
-      " [48 57 68]\n",
-      " [49 58 67]\n",
-      " [50 59 66]\n",
-      " [51 59 66]\n",
-      " [52 59 65]\n",
-      " [53 59 64]\n",
-      " [53 60 62]\n",
-      " [54 60 63]\n",
-      " [55 58 63]\n",
-      " [55 60 64]\n",
-      " [55 61 63]\n",
-      " [56 57 61]\n",
-      " [56 57 62]\n",
-      " [56 60 65]\n",
-      " [56 62 61]\n",
-      " [56 62 62]\n",
-      " [57 56 60]\n",
-      " [57 56 61]\n",
-      " [57 60 66]\n",
-      " [57 63 60]\n",
-      " [57 63 61]\n",
-      " [58 55 59]\n",
-      " [58 64 59]\n",
-      " [59 54 58]\n",
-      " [59 65 58]\n",
-      " [61 54 66]\n",
-      " [61 55 67]\n",
-      " [61 64 67]\n",
-      " [61 65 66]\n",
-      " [62 54 57]\n",
-      " [62 54 66]\n",
-      " [62 55 56]\n",
-      " [62 56 55]\n",
-      " [62 63 55]\n",
-      " [62 64 56]\n",
-      " [62 65 57]\n",
-      " [62 65 66]\n",
-      " [63 54 65]\n",
-      " [63 65 65]\n",
-      " [65 52 63]\n",
-      " [65 66 63]\n",
-      " [67 52 63]\n",
-      " [68 53 62]\n",
-      " [68 53 64]\n",
-      " [68 54 61]\n",
-      " [68 65 61]\n",
-      " [68 66 62]\n",
-      " [68 66 64]\n",
-      " [69 54 64]\n",
-      " [69 55 59]\n",
-      " [69 64 59]\n",
-      " [69 65 64]\n",
-      " [70 56 58]\n",
-      " [70 56 59]\n",
-      " [70 56 65]\n",
-      " [70 57 57]\n",
-      " [70 62 57]\n",
-      " [70 63 58]\n",
-      " [70 63 59]\n",
-      " [71 56 66]\n",
-      " [71 57 57]\n",
+      " [42 57 62]\n",
+      " [42 62 62]\n",
+      " [68 52 56]\n",
+      " [68 53 57]\n",
+      " [68 66 57]\n",
+      " [68 67 56]\n",
+      " [69 53 58]\n",
+      " [69 54 59]\n",
+      " [69 54 61]\n",
+      " [69 65 59]\n",
+      " [69 65 61]\n",
+      " [69 66 58]\n",
+      " [70 55 61]\n",
+      " [70 55 63]\n",
+      " [70 56 64]\n",
+      " [70 63 64]\n",
+      " [70 64 61]\n",
+      " [70 64 63]\n",
+      " [71 56 65]\n",
       " [71 57 66]\n",
-      " [71 62 57]\n",
       " [71 62 66]\n",
+      " [71 63 65]\n",
       " [72 57 67]\n",
+      " [72 58 68]\n",
+      " [72 61 68]\n",
       " [72 62 67]\n",
-      " [73 58 67]\n",
-      " [73 61 67]]\n"
+      " [89 58 69]\n",
+      " [89 61 69]]\n",
+      "29\n"
      ]
     }
    ],
@@ -93,7 +54,7 @@
     "\n",
     "\n",
     "#数据读取与质量预处理\n",
-    "data = io.loadmat('../../Matlab_files/top3d_Model_7/iters-180/iters-180-004/topModel_7_180_004.mat')\n",
+    "data = io.loadmat('../../Matlab_files/top3d_Model/top3d_Model_1/iter-100/iters-100-006/topModel_1_100_006.mat')\n",
     "data = data['data']\n",
     "data = np.array(data)\n",
     "print('数据初始维度：',data.shape)\n",
@@ -126,9 +87,9 @@
     "\n",
     "#尺寸标准化后模型可视化\n",
     "#测试保存\n",
-    "io.savemat('C:/Users/11573/Desktop/data/standardinizetest.mat',{'standarddata':data_new})\n",
+    "# io.savemat('C:/Users/11573/Desktop/data/standardinizetest.mat',{'standarddata':data_new})\n",
     "#正式保存\n",
-    "# io.savemat('../../Matlab_files/top3d_Model_7/iters-180/iters-180-004/standardtopModel_7_180_004.mat',{'standarddata':data_new})\n",
+    "io.savemat('../../Matlab_files/top3d_Model/top3d_Model_1/iter-100/iters-100-006/standardtopModel_1_100_006.mat',{'standarddata':data_new})\n",
     "\n",
     "#查找模型存在的单共享边等断裂结构\n",
     "defect_data = np.zeros((120, 120, 120))\n",
@@ -252,6 +213,7 @@
     "# data_new[81][60][63] = 1\n",
     "# data_new[83][60][63] = 1\n",
     "print(defect_index)\n",
+    "print(len(defect_index))\n",
     "# print('遍历了：',n,'次')\n",
     "# print('共有',t,'个非零元素')\n",
     "# print('共有',l,'个缺陷点')\n",
@@ -270,7 +232,7 @@
     "#         data_new[index_x, index_z, index_y] = 1\n",
     "\n",
     "#测试保存\n",
-    "io.savemat('C:/Users/11573/Desktop/data/defecttopModel.mat',{'defectdata':defect_data})\n",
+    "# io.savemat('C:/Users/11573/Desktop/data/defecttopModel.mat',{'defectdata':defect_data})\n",
     "\n",
     "# #正式保存\n",
     "# io.savemat('../../Matlab_files/top3d_Model_7/iters-180/iters-180-004/defecttopModel_7_180_004.mat',{'defectdata':defect_data})\n",
